Fix overlapping box pick

--- a/ticTacToe/public/css/style.css
+++ b/ticTacToe/public/css/style.css
@@ -6,3 +6,7 @@ button {
 button.multi {
     visibility: hidden;
 }
+
+div.container {
+    margin-left:70px;
+}
